# hardvibingwithsoftapionlybangersmodelswithchillprices

./: .env.example  .gitignore  AGENT_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/routes/: auth.py  chat.py  conversations.py
backend/app/services/: ai_service.py  encryption.py
